--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="title_description">Description</string>
     <string name="title_add_expense">Add Expense</string>
     <string name="title_settlement">Settlement</string>
+    <string name="title_payer">Payer</string>
+    <string name="title_payee">Payee</string>
     <string name="btn_add_expense">Add Expense</string>
     <string name="btn_cancel">Cancel</string>
     <string name="name">Name</string>
